test/e2e/chainsaw/stepTemplates/createGroup.yaml
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json

apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: create-group
spec:
    try:
      - script:
          env:
            - name: COMMAND_DIR
              value: ($commandDir)
            - name: GROUP_NAME
              value: ($groupName)
          content: |
            npx zx $COMMAND_DIR/createGroup.mjs --name $GROUP_NAME
          outputs:
            - name: GROUP_ID
              value: (json_parse($stdout).id)
    cleanup:
      - script:
          env:
            - name: GROUP_ID
              value: ($GROUP_ID)
            - name: COMMAND_DIR
              value: ($commandDir)
          content: |
            npx zx $COMMAND_DIR/deleteGroup.mjs --groupId $GROUP_ID
